# OBC_AAUSAT4_Exam

./: README.md  Scheduler.mw
fpga/: CheckFPGA.dwf3work  FPGArigtig.dwf3work  README.md
fpga/FPGAStateMachineProject/: Cmod-A7-Master.xdc  FPGAStateMachineProject.xpr  hs_err_pid7508.dmp  vivado.jou  vivado_17468.backup.jou  vivado_18884.backup.jou  vivado_7508.backup.jou  vivado_pid7508.str
fpga/FPGAStateMachineProject old/: FPGAStateMachineProject.xpr
fpga/FPGAStateMachineProject old/FPGAStateMachineProject.cache/wt/: synthesis.wdf  webtalk_pa.xml
fpga/FPGAStateMachineProject old/FPGAStateMachineProject.runs/.jobs/: vrs_config_3.xml
fpga/FPGAStateMachineProject old/FPGAStateMachineProject.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  StateMachine.bit  StateMachine.tcl  StateMachine.vdi  StateMachine_13688.backup.vdi  StateMachine_740.backup.vdi  StateMachine_bus_skew_routed.rpt  StateMachine_bus_skew_routed.rpx  StateMachine_clock_utilization_routed.rpt  StateMachine_control_sets_placed.rpt  StateMachine_drc_opted.rpt  StateMachine_drc_opted.rpx  StateMachine_drc_routed.rpt  StateMachine_drc_routed.rpx  StateMachine_io_placed.rpt  StateMachine_methodology_drc_routed.rpt  StateMachine_methodology_drc_routed.rpx  StateMachine_opt.dcp  StateMachine_physopt.dcp  StateMachine_placed.dcp  StateMachine_power_routed.rpt  StateMachine_power_routed.rpx  StateMachine_power_summary_routed.pb  StateMachine_route_status.rpt  StateMachine_routed.dcp  StateMachine_timing_summary_routed.rpt  StateMachine_timing_summary_routed.rpx  StateMachine_utilization_placed.rpt  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  vivado.jou  vivado.pb  vivado_13688.backup.jou  vivado_740.backup.jou  (+1 more)
fpga/FPGAStateMachineProject old/FPGAStateMachineProject.runs/synth_1/: .vivado.begin.rst  StateMachine.dcp  StateMachine.vds  StateMachine_utilization_synth.pb  StateMachine_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
fpga/FPGAStateMachineProject/FPGAStateMachineProject.cache/wt/: project.wpc  synthesis.wdf  webtalk_pa.xml
fpga/spi/: Cargo.toml
fpga/spi/.cargo/: config
fpga/spi/src/: fpga_in.rs  fpga_out.rs  main.rs
obc/: README.md
obc/fp/: Cargo.toml
obc/fp/examples/: blackbox.rs  excan.rs  garbage.rs  main.rs  main_port.rs  rtc.rs  rtc2.rs  schedule48.rs  schedule48gammel.rs  test_for_id_manager.rs
obc/fp/src/: excan.rs  exrtc.rs  flightplanner.rs  id_manager.rs  lib.rs  main.rs
obc/include/memory/: Cargo.toml
obc/include/memory/examples/: overwrite.rs  write_read_block.rs
obc/include/memory/src/: lib.rs  w25q128.rs
(+72 files in other folders)
