[package]
name = "flash"
version = "0.2.1"
edition = "2021"
authors = ["Jonas E. Jakobsen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"

[dependencies.stm32f4xx-hal]
version  = "0.15.0"
features = ["stm32f446"]

[dependencies.cortex-m] # Cortex-M core peripherals
version = "0.7.4"
features = [ "critical-section-single-core" ] # Needed by defmt-rtt

[dev-dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe ="0.3.1"
